[gd_scene load_steps=51 format=2]

[ext_resource path="res://assets/player/downwalk/2.png" type="Texture" id=1]
[ext_resource path="res://assets/player/downwalk/5.png" type="Texture" id=2]
[ext_resource path="res://assets/player/sidewalk/walk2.png" type="Texture" id=3]
[ext_resource path="res://assets/player/upwalk/1.png" type="Texture" id=4]
[ext_resource path="res://assets/player/idle/5.png" type="Texture" id=5]
[ext_resource path="res://assets/player/sidewalk/walk3.png" type="Texture" id=6]
[ext_resource path="res://assets/player/upwalk/2.png" type="Texture" id=7]
[ext_resource path="res://assets/player/downwalk/3.png" type="Texture" id=8]
[ext_resource path="res://assets/player/idle/3.png" type="Texture" id=9]
[ext_resource path="res://assets/player/upwalk/3.png" type="Texture" id=10]
[ext_resource path="res://assets/player/downwalk/1.png" type="Texture" id=11]
[ext_resource path="res://assets/player/idle/4.png" type="Texture" id=12]
[ext_resource path="res://assets/player/sidewalk/walk1.png" type="Texture" id=13]
[ext_resource path="res://assets/player/idle/1.png" type="Texture" id=14]
[ext_resource path="res://assets/player/sidewalk/walk4.png" type="Texture" id=15]
[ext_resource path="res://assets/player/sidewalk/walk6.png" type="Texture" id=16]
[ext_resource path="res://assets/player/downwalk/4.png" type="Texture" id=17]
[ext_resource path="res://assets/player/downwalk/6.png" type="Texture" id=18]
[ext_resource path="res://src/player/player.gd" type="Script" id=19]
[ext_resource path="res://assets/player/idle/2.png" type="Texture" id=20]
[ext_resource path="res://assets/player/sidewalk/walk5.png" type="Texture" id=21]
[ext_resource path="res://assets/player/upwalk/6.png" type="Texture" id=22]
[ext_resource path="res://assets/player/upwalk/4.png" type="Texture" id=23]
[ext_resource path="res://assets/player/upwalk/5.png" type="Texture" id=24]
[ext_resource path="res://assets/player/upattack/2.png" type="Texture" id=25]
[ext_resource path="res://assets/player/upattack/3.png" type="Texture" id=26]
[ext_resource path="res://assets/player/upattack/1.png" type="Texture" id=27]
[ext_resource path="res://assets/player/downattack/1.png" type="Texture" id=28]
[ext_resource path="res://assets/player/downattack/2.png" type="Texture" id=29]
[ext_resource path="res://assets/player/downattack/3.png" type="Texture" id=30]
[ext_resource path="res://assets/player/sideattack/2.png" type="Texture" id=31]
[ext_resource path="res://assets/player/sideattack/1.png" type="Texture" id=32]
[ext_resource path="res://assets/player/sideattack/3.png" type="Texture" id=33]
[ext_resource path="res://assets/player/Attack2.ogg" type="AudioStream" id=34]
[ext_resource path="res://assets/gui/setting.png" type="Texture" id=35]
[ext_resource path="res://assets/player/bowattack/up.png" type="Texture" id=36]
[ext_resource path="res://assets/player/bowattack/down.png" type="Texture" id=37]
[ext_resource path="res://assets/player/bowattack/side.png" type="Texture" id=38]
[ext_resource path="res://assets/arrow/Bow_shoot.ogg" type="AudioStream" id=39]
[ext_resource path="res://assets/background/BGM.mp3" type="AudioStream" id=40]
[ext_resource path="res://assets/house/house.png" type="Texture" id=41]
[ext_resource path="res://assets/chest/chest.png" type="Texture" id=42]
[ext_resource path="res://assets/altar/summon1.png" type="Texture" id=43]
[ext_resource path="res://assets/player/Player_hurt1.ogg" type="AudioStream" id=44]
[ext_resource path="res://assets/player/explosion.png" type="Texture" id=45]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.5269, 29.1507 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 20 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 22 ) ],
"loop": true,
"name": "up_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "downattack",
"speed": 3.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "upattack",
"speed": 3.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 16 ) ],
"loop": true,
"name": "side_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 31 ), ExtResource( 33 ) ],
"loop": true,
"name": "sideattack",
"speed": 3.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 38 ), ExtResource( 38 ) ],
"loop": true,
"name": "bowside",
"speed": 3.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 17 ), ExtResource( 2 ), ExtResource( 18 ) ],
"loop": true,
"name": "down_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 36 ), ExtResource( 36 ) ],
"loop": true,
"name": "bowup",
"speed": 3.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 37 ), ExtResource( 37 ) ],
"loop": true,
"name": "bowdown",
"speed": 3.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 45 ), ExtResource( 45 ) ],
"loop": true,
"name": "explosion",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.0727, 45.8177 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 45.5377, 28.0322 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 88, 83.5 )

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_mask = 524312
script = ExtResource( 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.50143, -35.3418 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.259438, -42.8581 )
scale = Vector2( 2.76651, 2.4823 )
frames = SubResource( 2 )
animation = "explosion"
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" type="Area2D" parent="."]
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D"]
show_behind_parent = true
light_mask = 524289
position = Vector2( 0, -37 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="area2Dattack" type="Area2D" parent="."]
collision_mask = 6

[node name="attackarea" type="CollisionShape2D" parent="area2Dattack"]
show_behind_parent = true
position = Vector2( 0.334, -85 )
shape = SubResource( 4 )
disabled = true

[node name="explosion" type="Area2D" parent="."]
collision_mask = 6

[node name="attackarea" type="CollisionShape2D" parent="explosion"]
position = Vector2( 2, -42.5 )
shape = SubResource( 5 )
disabled = true

[node name="Camera2D2" type="Camera2D" parent="."]
pause_mode = 2
position = Vector2( 0, -30 )
z_index = 3
z_as_relative = false
current = true

[node name="Label" type="Label" parent="Camera2D2"]
margin_left = -501.626
margin_top = -288.61
margin_right = -461.626
margin_bottom = -274.61
text = "health"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Camera2D2"]
margin_left = -456.0
margin_top = -289.0
margin_right = -416.0
margin_bottom = -275.0
text = "50/50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Camera2D2"]
margin_left = 449.82
margin_top = -298.56
margin_right = 507.82
margin_bottom = -245.56
texture_normal = ExtResource( 35 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="regenerate" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="bow" type="Timer" parent="."]
one_shot = true

[node name="attack" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 34 )
bus = "effect"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )
autoplay = true
bus = "BGM"

[node name="bow2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 39 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 44 )
bus = "effect"

[node name="house" type="Sprite" parent="."]
visible = false
position = Vector2( -469.851, -53.5088 )
scale = Vector2( 6.381, 6.456 )
texture = ExtResource( 41 )
centered = false
offset = Vector2( -36, -54 )

[node name="chest" type="Sprite" parent="."]
visible = false
position = Vector2( -440.254, 125.909 )
texture = ExtResource( 42 )
offset = Vector2( 0, -16 )

[node name="altar" type="Sprite" parent="."]
visible = false
position = Vector2( -464, 264 )
scale = Vector2( 3, 3 )
texture = ExtResource( 43 )

[connection signal="attack" from="." to="." method="_on_KinematicBody2D_attack"]
[connection signal="attack2" from="." to="." method="_on_KinematicBody2D_attack2"]
[connection signal="beattack" from="." to="." method="_on_KinematicBody2D_beattack"]
[connection signal="bowattack" from="." to="." method="_on_KinematicBody2D_bowattack"]
[connection signal="explosion" from="." to="." method="_on_KinematicBody2D_explosion"]
[connection signal="area_entered" from="Node2D" to="." method="_on_Node2D_area_entered"]
[connection signal="pressed" from="Camera2D2/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="regenerate" to="." method="_on_regenerate_timeout"]
[connection signal="timeout" from="bow" to="." method="_on_bow_timeout"]
